--- a/win/Base/Base.vcxproj.filters
+++ b/win/Base/Base.vcxproj.filters
@@ -24,5 +24,13 @@
     <ClInclude Include="..\..\src\Base\TimeUtils.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\Base\Configs.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\src\Base\Log.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
